--- a/src/main/R/badWeather/resultDemo.Rmd
+++ b/src/main/R/badWeather/resultDemo.Rmd
@@ -78,7 +78,6 @@ for(i in 1:nrow(holidays)){
 df_holidays <- data.frame(date = holiday_days,isHoliday = TRUE)
 
 ```
-##Modify and join data
 
 ```{r modify, message=FALSE, warning=FALSE}
 # Weatherstack
@@ -127,8 +126,12 @@ day_description_impact <- day_description_impact %>% group_by(date)%>%
 #####Join the data#####
 
 result_data <- demand %>% left_join(day_description_impact, by = "date") %>% inner_join(ingolstadt_weather,by = "date") %>% inner_join(df_stringency,by = "date") %>% mutate(date = as.Date(date,format = "%Y-%m-%d"))
-#Also need to be added weekday
-result_data <- result_data %>% mutate(wday = as.character(wday(date,week_start = 1)))
+#Also need to be added weekday and simplified date variable
+result_data <- result_data %>% 
+  mutate(wday = as.character(wday(date,week_start = 1))) %>%
+  dplyr::arrange(result_data, result_data$date) %>%
+  distinct() %>%
+  mutate(date_simplified = as.integer(date) - as.integer(min(result_data$date)))
 
 #Append holidays
 result_data <- result_data %>% left_join(df_holidays, by = "date") %>% replace_na(list(isHoliday = FALSE,snow = 0)) #%>% filter(noRides != 0) #%>% filter(date <"2021-07-01")
@@ -158,16 +161,22 @@ result_data <- result_data %>%
 From already conducted analysis as well as the following plots we can see a strong impact of the different weekdays as well as holidays on the number of daily KEXI rides. As this analysis is thought of as a preparation for building a potential transport model using the simulation tool MATSim (Multi Agent Transport Simulation), where typical weekdays are simulated, holidays and non-typical weekdays are filtered out.
 
 ```{r plotting wday and holidays}
-wday_plot <- ggplot(result_data)+
+
+plot_data <- result_data
+  
+plot_data$isHoliday[plot_data$isHoliday==TRUE] <- "Holiday"
+plot_data$isHoliday[plot_data$isHoliday==FALSE] <- "Non-holiday"
+
+wday_plot <- ggplot(plot_data)+
   geom_boxplot(aes(x = wday,y = noRides)) +
   xlab("Weekday") + 
   ylab("Number of rides") +
   labs(title="Daily no of KEXI rides per weekday") +
   theme(plot.title = element_text(hjust=0.5))
 
-holiday_plot <- ggplot(result_data)+
-  geom_boxplot(aes(x = isHoliday,y = noRides )) +
-    xlab("Is holiday") +
+holiday_plot <- ggplot(plot_data)+
+  geom_boxplot(aes(x = isHoliday, y = noRides)) +
+    xlab(NULL) +
     ylab("Number of rides") +
     labs(title="Daily no of KEXI rides per holiday / non-holiday") +
   theme(plot.title = element_text(hjust=0.5))
@@ -222,8 +231,12 @@ To get a general impression of the above weather parameters' influence on the nu
 
 ```{r overall correlations, warning = FALSE}
 
+# test_cor <- result_data  %>% ungroup() %>%
+#   dplyr::select(-weather_impact,-description ,-date,-season,-noRequests,-avgEuclidianDistance_m,-avgTravelTime_s,-wday, -tsun, -isHoliday)
+# print(cor(test_cor))
+
 best_pred <- result_data  %>% ungroup() %>%
-  dplyr::select(-noRides,-description ,-date,-season,-noRequests,-avgEuclidianDistance_m,-avgTravelTime_s,-wday) %>%
+  dplyr::select(-noRides,-description ,-date, -date_simplified,-season,-noRequests,-avgEuclidianDistance_m,-avgTravelTime_s,-wday) %>%
   map_dbl(cor,y = result_data$noRides) %>%
   #map_dbl(abs) %>%
   sort(decreasing = TRUE) 
@@ -231,7 +244,7 @@ best_pred <- result_data  %>% ungroup() %>%
 print(best_pred)
 ```
 
-The correlation analysis shows that only the covid19 policy stringency has a strong influence on the daily number of KEXI rides (-0.56). Weather parameters do not seem to have a high impact, which might be due to the strong effects of the pandemic. Therefore weather parameters with a correlation value of bigger than |0.05| (TODO check if this makes sense!-sm0223) are taken into account. This includes some parameters in relation to wind (wspd, wpgt, wdir), temperature (tdiff, tmax, tavg, tmin) and air (pres).
+The correlation analysis shows that only the covid19 policy stringency has a strong influence on the daily number of KEXI rides (-0.56). Weather parameters do not seem to have a high impact, which might be due to the strong effects of the pandemic. Therefore weather parameters with a correlation value of bigger than |0.04| are taken into account. This includes some parameters in relation to wind (wspd, wpgt, wdir), temperature (tdiff, tmax, tavg, tmin) and air (pres).
 
 # Building a linear regression model
 
@@ -278,7 +291,7 @@ The residuals plot indicates a continuous growing trend for the number of daily 
 ```{r omega date residuals,out.width="100%"}
 
 # omega_date_model = lm(noRides ~ tavg+pres+stringency+snow+date+season+wspd,data = data)
-omega_date_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+tdiff+tmax+tavg+tmin+pres+date,data = data)
+omega_date_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+tdiff+tmax+tavg+tmin+pres+date_simplified,data = data)
 
 summary(omega_date_model)
 ```
@@ -303,7 +316,7 @@ ggplotly(ggplot(test_data %>% filter(year(date)>=2020))+
 
 ```
 
-The inclusion of a date parameter the model accuracy to 0.7876, which is a rather high value in weather statistics (TODO ask Sasha where he got that -sm0223) This goes in line with a decrease of the residual standard error by 8.75 to 16.01. The distribution of the predicted model values as well as the residuals show a typical form. To further check the model's correctness, a histogram of the residuals is plotted.
+For reasons of dimensioning the given date variable is transformed into an integer, which represents the number of days, which have passed since the KEXI service has started. The inclusion of the subsequent date parameter ("date_simplified") improves the model accuracy to 0.7845. This goes in line with a decrease of the residual standard error by 8.62 to 16.09. The distribution of the predicted model values as well as the residuals show a typical form. To further check the model's correctness, a histogram of the residuals is plotted.
 
 ```{r residual destributions 1}
 
@@ -315,18 +328,16 @@ ggplotly(barplot)
 
 ```
 
-The residuals histogram is bell shaped, which indicates a proper model quality. @Sydney Why is that? Why does it have to be bell shaped?
-
-
+The residuals histogram is bell shaped, which indicates that the calculated model really is a linear model.
 
 # Reducing the linear regression model
 
-The above linear regression model includes multiple parameters, which are marked as non-significant. Thus it should be possible to exclude those parameters from the regression model without decreasing the model accuracy. As tavg and tmin are both a description of the temperature, 2 reduced models are calculated, one for each variable while the other variables (stringency and date) are the same.
+The above linear regression model includes multiple parameters, which are marked as non-significant. Thus it should be possible to exclude those parameters from the regression model without decreasing the model accuracy. As tavg and tmin are both a description of the temperature, 2 reduced models are calculated, one for each variable while the other variables (stringency and date_simplified) stay the same.
 
 ```{r reduced model 1 residuals}
 
 # reduced_1_model <- lm(noRides ~ tavg+pres+stringency+snow+weather_impact*description+date+wspd,data = data)
-reduced_1_model <- lm(noRides ~ stringency+tavg+date, data = data)
+reduced_1_model <- lm(noRides ~ stringency+tavg+date_simplified, data = data)
 
 summary(reduced_1_model)
 
@@ -340,7 +351,7 @@ summary(reduced_1_model)
 ```{r reduced model 2 residuals}
 
 # reduced_2_model <- lm(noRides ~ tavg+pres+stringency+weather_impact+description+date,data = data)
-reduced_2_model <- lm(noRides ~ stringency+tmin+date, data = data)
+reduced_2_model <- lm(noRides ~ stringency+tmin+date_simplified, data = data)
 
 summary(reduced_2_model)
 
@@ -352,20 +363,20 @@ test_data <- data %>% add_predictions(model = model) %>% add_residuals(model = m
 
 ```
 
-For both 'reduced models' the Adjusted R-squared value remain roughly the same as does the Residual standard error. In terms of both values the model including tavg as the main temperature value performs a little better. Therefore, it will be used as the main variable representing the temperature. In opposition to the correlation analysis, which was performed to get a first impression of variable impact on the number of daily KEXI rides, the calculated linear regression model shows that due to its p-value (0.824) the strictness of covid-related policies (stringency) is not relevant for projecting the daily number of KEXI rides. Hence it is excluded from the model, too.
+For both 'reduced models' the Adjusted R-squared value remain roughly the same as does the Residual standard error. In terms of both values the model including tavg as the main temperature value performs a little better. Therefore, it will be used as the main variable representing the temperature. In opposition to the correlation analysis, which was performed to get a first impression of variable impact on the number of daily KEXI rides, the calculated linear regression model shows that due to its p-value (0.804) the strictness of covid-related policies (stringency) is not relevant for projecting the daily number of KEXI rides. Hence it is excluded from the model, too.
 
-<!-- As we can see excluding variables from model doesn't make it worse residual st. error remains near 16.32, we can also use anova test function from stats package to check model variable significance. But firstly we would like to get best best model with possible minimum variables. For this purpose we can inspect p-value from model summary, it says how significant separate variable in model predictions, less p-value - more significant. So we would like to exclude snow, and combined term ow weather_impact and description out of model. -->
-
-<!-- As we can see removing snow and separation of weather_impact and description, increased model quality with reducing residual standard error. Anova(analysis of variance) test between these two models also doesn't show significant difference `r anova(reduced_2_model,reduced_1_model)[["Pr(>F)"]][2]` because p-value is much greater than 0.05. -->
-
-<!-- After few iterations we get to a model that contains only strictness of the policy restrictions, temperature and data. Represented model explains also explains most of the observations with relatively low residual standard error, but it is minimal for excluding, because anova significance test difference between models without any of remaining predictors has p-value<0.05. So we get to our final model, that explains number of KeXi Rides using temperature, covid strictness level and date(positive growing trend).  -->
-
-<!-- Critical point there, is that using season variable instead of temperature variable doesn't decrease model quality, even slightly increases. As a conclusion temperature plays a role of a season in model by fitting data, because average temperature correlates with season. But filtering a data to a specific season(e.g. summer) with model fit(using temperature), returns a R squared result of 0.809, that is relatively high for an weather analysis. Anova test of model with excluded temperature variable and model with temperature returns a value of 2.14*e^-10, so difference of model with weather and without have significant difference. -->
+A last correlation check of the left variables (number of KEXI rides, tavg and date_simplified) displays that the two independent variables tavg and date_simplified show a correlation of around 0.13 with each other. This fact should be taken into account when building the final linear regression model. A new parameter correlation = tavg * date_simplified is created and added as a further independent variable of the final model. The resulting model presents the correlation parameter to be non-significant. Further, an exclusion of the newly created variable from the linear regression model does not decrease the model's accuracy, so the correlation variable is removed from the analysis.
 
 ```{r reduced model 3 residuals,out.width="100%"}
 #data = data %>% filter(season == "summer")
 # reduced_3_model <- lm(noRides ~ tavg+stringency,data = data)
-reduced_3_model <- lm(noRides ~ tavg+date, data = data)
+cor_check <- data %>%
+  dplyr::select(noRides,tavg,date_simplified)
+print(cor(cor_check))
+
+data <- data %>%
+  mutate(correlation = tavg * date_simplified)
+reduced_3_model <- lm(noRides ~ tavg+date_simplified, data = data)
 
 summary(reduced_3_model)
 
@@ -378,34 +389,34 @@ ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
   geom_point(aes(x = date,y = noRides,color = "actual"))+
   geom_point(aes(x = date,y = pred,color = "predicted"))+
   scale_color_manual(values = colors)+
-  ggtitle("Linear regression model with independent variables tavg + date"))
+  ggtitle("Linear regression model with independent variables tavg + date_simplified"))
 ```
 ```{r,,out.width="100%",out.height="95%"}
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020))+
             geom_line(aes(x = date,y = resid,color = "residuals"))+
             geom_ref_line(h = 0)+
             scale_color_manual(values = colors)+
-            ggtitle("Residuals for linear regression model with independent variables tavg + date"))
+            ggtitle("Residuals for linear regression model with independent variables tavg + date_simplified"))
 
 ```
 
-The final linear regression model projects the daily number of KEXI rides as the dependent variable with the variables tavg and date as independent variables. With p-values of < 2e-16 both independent variables are of very high significance for explaining the dependent variable. The final adjusted R-squared value is 0.7872, which means that the calculated model is highly accurate.
+The final linear regression model projects the daily number of KEXI rides as the dependent variable with the variables tavg and date_simplified as independent variables. With p-values of < 2e-16 both independent variables are of very high significance for explaining the dependent variable. The final adjusted R-squared value is 0.7847, which means that 78% of variance in the dependent variable (daily number of KEXI rides) can be explained by the independent variables.
 
 The scatter plot, which compares the predicted number of KEXI rides with the actual number of rides per day, indicates that a linear regression approach is the right tool to describe the dependency of the number of KEXI rides on weather parameters when including a date variable, too. The predicted values have a linear form. The scatter plot as well as the residuals plot show a time span at the end  of June 2021 / beginning of July 2021, where the actual number of KEXI rides values drop to almost 0 and therefore, the linear regression model cannot predict adequate values. This is explained by a change of operators, which resulted in some days of service down time. Due to this explanation the gap will be ignored.
 
-As the resulting linear regression model has been determined, in a final step the residual distribution has to be checked.
+As the resulting linear regression model has been determined, in the concluding steps the model's linearity has to be demonstrated.
 
 ```{r residual destributions 3}
 
 barplot <- ggplot(test_data, aes(x = resid ))+
   geom_histogram(aes(y = stat(density)),colour="black", fill="white", binwidth=9)+
-  ggtitle("Final residuals distributions with independent variables tavg + date")
+  ggtitle("Final residuals distributions with independent variables tavg + date_simplified")
 
 ggplotly(barplot)
 
 ```
 
-As before, the residual distribution shows a bell-shape, which assures the model's quality. (@Sidney once again, why is that?) The 2 outliers to the left can again be explained by the operator change in June / July 2021.
+As before, the residual distribution shows a bell-shape, which assures that the calculated model has a linear shape. The 2 outliers to the left can again be explained by the operator change in June / July 2021. To further prove the model's linearity, a Quantile-Quantile Plot is created. The linear form of said plot is additional proof for the linear shape of the calculated linear regression model.
 
 ```{r}
 # test_data <- test_data %>% filter(resid>=-50)
@@ -417,16 +428,18 @@ m <- mean(test_data$resid)
 s <- sd(test_data$resid)
 n <- nrow(test_data)
 p <- (1 : n) / n - 0.5 / n
-plot1 = ggplotly(ggplot(test_data) + 
-     geom_qq(aes(sample = rnorm(resid,10,4)))+
-     geom_abline(intercept = 10, slope = 4,
-                 color = "red", size = 1.5, alpha = 0.8))
-plot2 = ggplotly(ggplot(test_data)+
-  geom_point(aes(x = p, y = sort(pnorm(resid, m, s))))+
-  geom_abline(
-                 color = "red",size = 1.5,alpha =0.8))
 
-anno = list( 
+plot1 <- ggplot(test_data) +
+  geom_qq(aes(sample=rnorm(resid,10,4)))+
+  geom_abline(intercept = 10, slope = 4,color = "red", size = 1.5, alpha = 0.8)+
+  ggtitle("Normal QQ-Plot for the final linear regression model")
+  
+# plot2 <- ggplotly(ggplot(test_data)+
+#   geom_point(aes(x = p, y = sort(pnorm(resid, m, s))))+
+#   geom_abline(
+#                  color = "red",size = 1.5,alpha =0.8))
+
+anno <- list( 
   list( 
      x = 0.2,  
     y = 1.0,  
@@ -448,15 +461,13 @@ anno = list(
     showarrow = FALSE 
   ))
 
-subplot(plot1,plot2) %>% layout(annotations = anno)
+ggplotly(plot1)
+
+# subplot(plot1,plot2) %>% layout(annotations = anno)
 ```
-
-<!-- So our residuals are normally distributed, that is also verified by shapiro wilk normality test because value of test `r shapiro.test(test_data$resid)$p.value` is much greater than 0.05. -->
-
-TODO: do we even need the qq and pp plot as we already have proof for the normal distribution of our residuals? 
 
 # Conclusion
 
 The performed linear regression analysis aimed to better understand the relation of daily number of KEXI rides and multiple weather variables. The real demand data, which is the base for this analysis, showed some significant demand differences depending on whether the date is on a weekend or not as well as whether it is a holiday or not. Hence all holidays and weekends were excluded from the analysis. A general correlation analysis (Pearson correlation coefficients) was performed to get a first idea of the parameter's influence on the daily number of KEXI rides. Only wind and temperature related variables seem to have a meaningful impact on the number of daily rides. As the real demand data is from a time span in which there were many pandemic related restrictions upon the society a strictness of covid policies was taken into account, too. The aforementioned had the strongest correlation on the daily number of KEXI rides.
-A first linear regression model showed a continuous growing trend of daily rides, which led to the conclusion to also integrate a date variable. The inclusion of date improved the model's quality dramatically. In a next step all the non-significant independent weather related variables were excluded. The model's accuracy stayed the same after that step. In a last step covid policy stringency also was excluded from the model because it was non-significant, too. The final linear regression model explains the daily number of KEXI rides (dependent variable) by using variables for average temperature (tavg) and date. Most importantly, the F-statistic for the calculated regression has a p-value of < 2.2e-16. In general, if the p-value is lower than 0.05, the null hypothesis can be revoked, which means that the performed linear regression provides a significant contribution to the change of the daily number of KEXI rides. The model's accuracy is 0.7872 with a residual standard error of 16.03. A scatter plot of actual number of rides vs. predicted number of rides depicts a linear form for the predicted values, which means that a linear regression is the adequate form of analysis. The residuals are distributed normally.
+A first linear regression model showed a continuous growing trend of daily rides, which led to the conclusion to also integrate a date variable. The inclusion of date improved the model's quality dramatically. In a next step all the non-significant independent weather related variables were excluded. The model's accuracy stayed the same after that step. In a last step covid policy stringency also was excluded from the model because it was non-significant, too. The final linear regression model explains the daily number of KEXI rides (dependent variable) by using variables for average temperature (tavg) and date (date_simplified). Most importantly, the F-statistic for the calculated regression has a p-value of < 2.2e-16. In general, if the p-value is lower than 0.05, the null hypothesis can be revoked, which means that the performed linear regression provides a significant contribution to the change of the daily number of KEXI rides. The model's accuracy is 0.7847 with a residual standard error of 16.09. A scatter plot of actual number of rides vs. predicted number of rides depicts a linear form for the predicted values, which means that a linear regression is the adequate form of analysis. The residuals distribution in a normal form as well as the linear form of the Quantile-Quantile Plot prove the linearity of the calculated linear regression model.
 
